# oysters31

./: .eslintrc.cjs  README.md  next.config.mjs  package-lock.json  package.json  server.js  start.sh  tsconfig.json
agents/: Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
agents/src/: config.py  main.py
agents/src/adapters/: instagram.py  telegram.py  vk.py  whatsapp.py
agents/src/agents/: graph.py  state.py
agents/src/agents/nodes/: checkout.py  sales.py  supervisor.py  support.py
agents/src/api/: routes.py
agents/src/db/: models.py  redis.py  session.py
agents/src/identity/: resolver.py
agents/src/llm/: client.py  prompts.py
agents/src/queue/: consumer.py  producer.py
agents/src/tools/: cart.py  escalate.py  order.py  stock.py
agents/tests/e2e/: test_order_flow.py
agents/tests/unit/: test_cart.py  test_order.py  test_stock.py
prisma/: schema.prisma  seed.ts
public/images/: README.md
scripts/: migrate-oysters-to-variants.ts  tsconfig.json
src/: middleware.ts
src/__tests__/: notification-settings.test.ts
src/app/: layout.tsx  manifest.ts  page.tsx  providers.tsx
src/app/admin/: layout.tsx  page.tsx
src/app/cart/: page.tsx  page.tsx.bak
src/app/catalog/: page.tsx
src/app/courier/: page.tsx
src/app/login/: page.tsx
src/app/offline/: page.tsx  (+1 more)
src/components/: Contacts.tsx  FeaturedProducts.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProductVariantSelector.tsx  QuickOrderModal.tsx  SupplyBanner.tsx  SupplyCartModal.tsx  SupplyProductModal.tsx
src/lib/: env.ts  order-workflow.ts
src/stores/: cart.ts
(+111 files in other folders)
